cabal-version:      2.4
name:               haskell
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             duketide
maintainer:         

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

library
    exposed-modules:  AOC
                    , IntCom
                    , Y2019.Day1
                    , Y2019.Day2
                    , Y2019.Day3
                    , Y2019.Day4
                    , Y2019.Day5
                    , Y2019.Day6
                    , Y2019.Day7
                    , Y2019.Day8
                    , Y2019.Day9

    -- Modules included in this library but not exported.
    -- other-modules: 

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base ^>=4.16.4.0,
                      split >=0.2.3 && < 0.3,
                      wreq >= 0.5.4 && < 0.6,
                      lens >= 5.2.2 && < 5.3,
                      bytestring >= 0.11.4 && < 0.12,
                      directory >= 1.3.6 && < 1.4,
                      unix >= 2.7.2 && < 2.8,
                      containers >= 0.6.5 && < 0.7,
    hs-source-dirs:   src
    default-language: Haskell2010

executable haskell
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:
        base ^>=4.16.4.0,
        haskell

    hs-source-dirs:   app
    default-language: Haskell2010
